--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>CSS</title>
 </head>
@@ -17,9 +20,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt eligendi nesciunt voluptatibus commodi aliquid dolorum dolor magnam aperiam quidem minima nobis corrupti inventore porro, nisi quo. Vel, suscipit deleniti?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt eligendi nesciunt voluptatibus commodi aliquid dolorum dolor magnam aperiam quidem minima nobis corrupti inventore porro, nisi quo. Vel, suscipit deleniti?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt eligendi nesciunt voluptatibus commodi aliquid dolorum dolor magnam aperiam quidem minima nobis corrupti inventore porro, nisi quo. Vel, suscipit deleniti?</p>
-            </div>
-            <div class="img">
-                <img src="img/meme (2).jpg" alt="">
             </div>
             <div class="img">
                 <img src="img/meme (2).jpg" alt="">
@@ -47,6 +47,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis deserunt eligendi nesciunt voluptatibus commodi aliquid dolorum dolor magnam aperiam quidem minima nobis corrupti inventore porro, nisi quo. Vel, suscipit deleniti?</p>
             </div>
         </article>
+
+        <div id="img">
+            <h3>Esto es un titulo delante de la imagen</h3>
+        </div>
     </section>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum fuga repellat libero quibusdam ad explicabo assumenda eius beatae, voluptatem dolor vitae quos impedit accusantium nulla fugiat repellendus molestias adipisci omnis?</p>
