--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>CSS</title>
 </head>
 <body>
+
+    <!-- 
     <h1>Protocolo de asitencia UTN</h1>
     <section>
         <article class="article">
@@ -59,5 +61,28 @@
     <a href="">uno</a>
     <a href="">dos</a>
     <a href="">tres</a>
+    -->
+
+    <div class="box z1 texto">1</div>
+    <div class="box z2 texto">2</div>
+    <div class="box z3 texto">3</div>
+
+    <!-- 
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
+
+    <div id="posicionamiento">
+
+    </div>
+    -->
+
 </body>
 </html>
