--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     <a href="">uno</a>
     <a href="">dos</a>
     <a href="">tres</a>
-    -->
+    
 
     <div class="box z1 texto">1</div>
     <div class="box z2 texto">2</div>
     <div class="box z3 texto">3</div>
-
+-->
     <!-- 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, sint deserunt placeat non quasi veniam laboriosam in eius veritatis nobis voluptatem laudantium consequuntur sed vel doloribus voluptate unde sit repellendus.*5</p>
@@ -82,7 +82,30 @@
     <div id="posicionamiento">
 
     </div>
-    -->
+    
 
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+        <li>item 6</li>
+        <li>item 7</li>
+        <li>item 8</li>
+        <li>item 9</li>
+    </ul>
+
+    <div>
+        <p>Lorem ipsum dolor sit, <b>amet consectetur adipisicing elit</b>. Quos repellendus autem nihil explicabo ipsam aliquam doloribus perspiciatis necessitatibus iste aspernatur laudantium commodi quasi dicta, quia, eligendi cumque temporibus repellat vitae?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus autem nihil explicabo ipsam aliquam doloribus perspiciatis necessitatibus iste aspernatur laudantium commodi quasi dicta, quia, eligendi cumque temporibus repellat vitae?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos repellendus autem nihil explicabo ipsam aliquam doloribus perspiciatis necessitatibus iste aspernatur laudantium commodi quasi dicta, quia, eligendi cumque temporibus repellat vitae?</p>
+    </div>
+-->
+    <div class="container">
+        <div class="box  texto">1</div>
+        <div class="box  texto">2</div>
+        <div class="box  texto">3</div>
+    </div>
 </body>
 </html>
